# the_culture_of_international_relations

./: .gitignore  .pylanceignore  .pylintrc  INSTALL-SIMPLIFIED.md  Makefile  Pipfile  README.md  Untitled.ipynb  culture_of_international_relation.ipynb  file_utility.py  google_drive.py  inline_charts_templates.ipynb  nb_clear_outputs.sh  network_utility.py  package-lock.json  part_of_speech_tagging.ipynb  plot_utility.py  pyproject.toml  pyrightconfig.json  requirements.txt  scrape_unts_treaties.ipynb  setup_env.sh  setup_env_uv.py  treaty_state.py  unknown_parties.xlsx  update.bash  update_master.sh  utility.py  widgets_utility.py
0_bens_prioritized_methods/: 1_word_frequency_trends.ipynb  2_most_descriminating_words.ipynb  3_word_in_doc_frequencies.ipynb  rename_corpus_files.ipynb
0_data_preparation/: culture_of_international_relation.ipynb
1_quantitative_analysis/: 0_notebook_instructions.ipynb  1_quantitative_analysis_for_Rise_of_CT_article_HT18.ipynb  1_quantitative_analysis_for_Södertörn_5_Nov.ipynb  1_quantitative_analysis_of_wti.ipynb  2_title_analysis.ipynb  2_wti_headnote_co_occurrence.ipynb  __init__.py  analysis_data.py  analysis_plot.py  configuration_elements.py  headnode_co_occurrence_gui.py  headnode_gui.py  headnote_corpus.py  party_analysis_gui.py  quantitative_analysis_data.py  quantitative_analysis_of_wti.ipynb  quantitative_analysis_party_gui.py  quantitative_analysis_plot.py  quantitative_analysis_topic_gui.py  simple_sanity_checks.ipynb  topic_analysis_gui.py  update_wti_from_google_drive.ipynb
2_network_analysis/: 1_network_analysis_wti.ipynb  network_analysis.py  network_analysis_gui.py  network_analysis_plot.py  network_analysis_wti.ipynb
3_text_analysis/: 1_explore_corpus.ipynb  1_extract_corpus.ipynb  1_extract_corpus_text.ipynb  2_topic_modelling.ipynb  3_named_entity_recognition.ipynb  4_document_similarity.ipynb  NER.ipynb  NER_runner_CoreNLP.py  corpus_check.ipynb  country_lemmas.txt  domain_logic_config.py  domain_logic_tCoIR.py  gui_utility.py  keyword_extraction-Copy1.ipynb  lib  mallet_service.py  mallet_topic_model.py  most_discriminating_terms_gui.py  most_discriminating_terms_patch.py  plot_topics_extraction_with_nmf_lda.ipynb  pyLDAvis.ipynb  setup.py  stanford_core_nlp_tests.ipynb  sttm_topic_model.py  text_corpus.py  textacy_corpus_gui.py  textacy_corpus_utility.py  textacy_patch.py  topic_model.py  topic_model_gui.py  topic_model_utility.py  treaty_corpus.py  treaty_corpus_basic_stats.ipynb  word_frequencies_gui.py  work_in_progress.ipynb  work_in_progress_snippets.ipynb
3_text_analysis/archived/: treaty_corpus_basic_stats.ipynb  treaty_corpus_basic_stats_saved.ipynb  untitled1.py
3_text_analysis/work_in_progress/: configuration_elements.py  corpus_check.ipynb  credentials.json  glove_co_occurrence.ipynb  glove_co_occurrence_2.ipynb  keyword_extraction-rake.ipynb  work_in_progress.ipynb
3_text_analysis/workshop/: 1_intro_to_data_science.ipynb  3_the_SOU_dataset.ipynb  5_topic-modelling.ipynb  intro_to_topic_modelling.ipynb
4_publications/: 1_quantitative_analysis_for_Rise_of_CT_article_HT18.ipynb
6_text_similarity/: 1_text_similarity.ipynb  generic_process_corpus_gui.py  treaty_text_NN.json
admin/: copy_notebooks.ipynb
common/: __init__.py  color_utility.py  config.py  domain_logic.py  domain_logic_config.py  domain_logic_tCoIR.py  file_utility.py  google_drive.py  network_utility.py  plot_utility.py  treaty_state.py  treaty_utility.py  utility.py  widgets_config.py  widgets_utility.py  wordcloud_utility.py
common/configuration/: __init__.py  config.py  interface.py  provider.py  resolve.py  setup.py  utility.py
common/corpus/: __init__.py  container.py  corpus_utility.py  generate_corpus.py  headnote_corpus.py  textacy_corpus_utility.py  treaty_corpus.py  utility.py
common/gui/: gui_utility.py  headnode_gui.py  load_corpus_gui.py  load_wti_index_gui.py  most_discriminating_terms_gui.py  most_discriminating_terms_patch.py  textacy_corpus_gui.py  utility.py  widgets_config.py  word_frequencies_gui.py  word_in_doc_frequencies_gui.py
common/most_discriminating_terms/: most_discriminating_terms_gui.py
common/network/: graphtool_utility.py  layout.py  layout_graphtool.py  layout_graphviz.py  layout_networkx.py  metrics.py  networkx_utility.py  plot.py  plot_graphtool.py  plot_networkx.py
common/network_analysis/: network_analysis.py  network_analysis_gui.py  network_analysis_plot.py
common/quantative_analysis/: analysis_data.py  analysis_plot.py  party_analysis_gui.py  topic_analysis_gui.py
common/resources/: __init__.py  config.yml  fox_stopwords.txt  world_regions.yml
common/utils/: __init__.py  color_utility.py  most_discriminating_terms_patch.py
corpus_text_analysis/: treaty_corpus.py  treaty_corpus_basic_stats.ipynb
data/: gpe_substitutions.txt  parties_curated.xlsx  parties_curated_continent.csv  parties_curated_group.csv  parties_curated_parties.csv  tagset.csv
documents/: 1_analysis_Rise_of_CT_article_2020.ipynb  1_quantitative_analysis_for_Rise_of_CT_article_HT18.ipynb  200702_analysis_Rise_of_CT_article_2020.ipynb  analysis_Rise_of_CT_article_2020.ipynb  quantitative_analysis_for_Rise_of_CT_article_HT18.ipynb
legacy/: extract_corpus.ipynb  extract_corpus.py  graphtool_utility.py  layout_graphtool.py  metrics.py  network_utility.py  plot.py  plot_graphtool.py  rake_gui.py  rake_key_terms_gui.py  text_corpus.py  treaty_corpus.py  treaty_utility.py
notebooks/3_text_analysis/: 1_explore_corpus.ipynb
notebooks/network_analysis/: README.md  (+2 more)
scripts/: stanford_ner.ipynb
similarity/: Untitled.ipynb  hirschberg_scores_lemma_noun.xlsx  ssw_lib.py
topic-model/: common
(+38 files in other folders)
