[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-culture-of-international-relations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.8.1",
    "community>=1.0.0b1",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "nltk>=3.9.2",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pylint>=4.0.2",
]

[tool.setuptools.packages.find]
include = ["common*", "1_quantitative_analysis*", "2_network_analysis*", "3_text_analysis*"]

[tool.pylint.MASTER]
init-hook = 'import sys; sys.path.append(".")'
