[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-culture-of-international-relations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.8.1",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "nltk>=3.9.2",
    "pydotplus>=2.0.2",
    "python-louvain>=0.16",
    "scipy>=1.16.3",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pylint>=4.0.2",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line-length = 120
target-version = ["py311"]
exclude = '''
(
  \.git
  | \.pypy_cache
  | \.pytest_cache
  | \.mypy_cache
  | deprecated
)
'''

[tool.ruff]
line-length = 140  # same as rustfmt

[tool.pylint.master]
extension-pkg-allow-list = ["community"]
init-hook='import sys; sys.path.append(".")'
ignore=["deprecated", "other", "documents", "__pycache__"]
ignore-patterns=[".*deprecated.*", ".*other.*", ".*documents.*"]

[tool.pylint.messages_control]
disable = [
    "fixme",
    "duplicate-code",
    "missing-function-docstring",
    "line-too-long",
    "missing-module-docstring",
    "missing-class-docstring",
    "invalid-name",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "too-many-locals",
    "too-many-public-methods",
    "wrong-import-position",
    "logging-fstring-interpolation",
    "nested-min-max",
    "c-extension-no-member",
    "logging-not-lazy"
]

[tool.setuptools.packages.find]
include = ["common*", "1_quantitative_analysis*", "2_network_analysis*", "3_text_analysis*"]
