[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-culture-of-international-relations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.8.1",
    "dotenv>=0.9.9",
    "en-core-web-lg",
    "ftfy>=6.3.1",
    "gensim>=4.4.0",
    "ipydatagrid>=1.4.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.10",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "nltk>=3.9.2",
    "openpyxl>=3.1.5",
    "pydotplus>=2.0.2",
    "python-louvain>=0.16",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "spacy>=3.8.8",
    "textacy>=0.13.0",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "jupytext>=1.18.1",
    "pylint>=4.0.2",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
]

# [tool.uv.venv]
# seed = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
py_version = "311"
# exclude = '''
# (
#   \.git
#   | \.pypy_cache
#   | \.pytest_cache
#   | \.mypy_cache
#   | deprecated
# )
# '''

[tool.ruff]
line-length = 140  # same as rustfmt
indent-width = 4
target-version = "py311"
extend-exclude = ["deprecated"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
fixable = ["ALL"]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["B905", "E501", "E722" ]

# select = ["E4", "E7", "E9", "F"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.pylint.master]
extension-pkg-allow-list = ["community"]
init-hook='import sys; sys.path.append(".")'
ignore=["deprecated", "other", "documents", "__pycache__"]
ignore-patterns=[".*deprecated.*", ".*other.*", ".*documents.*"]

[tool.pylint.messages_control]
disable = [
    "fixme",
    "duplicate-code",
    "missing-function-docstring",
    "line-too-long",
    "missing-module-docstring",
    "missing-class-docstring",
    "invalid-name",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "too-many-locals",
    "too-many-public-methods",
    "wrong-import-position",
    "logging-fstring-interpolation",
    "nested-min-max",
    "c-extension-no-member",
    "logging-not-lazy",
    "too-many-branches",
    "too-many-statements"
]

[tool.setuptools.packages.find]
include = ["common*", "1_quantitative_analysis*", "2_network_analysis*", "3_text_analysis*"]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0.tar.gz" }
